added a lot of results and some more revisions

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -19,6 +19,9 @@
 \subsection{Spatial Discretization for Scalar Conservation Laws
   \label{sec:spatial_discretization_scalar}}
   \input{content/discretization/spatial_discretization_scalar}
+  \subsubsection{Implementation of Incoming Flux Boundary Conditions
+    \label{sec:transport_bc}}
+    \input{content/discretization/transport_bc}
 \subsection{Spatial Discretization for Conservation Law Systems
   \label{sec:spatial_discretization_system}}
   \input{content/discretization/spatial_discretization_system}
