--- a/doc/dissertation/content/discretization/ssprk.tex
+++ b/doc/dissertation/content/discretization/ssprk.tex
@@ -1,4 +1,5 @@
-Strong Stability-Preserving Runge Kutta (SSPRK) methods are a subclass of
+Strong Stability-Preserving Runge Kutta (SSPRK) methods
+\cite{gottlieb}\cite{macdonald} are a subclass of
 Runge Kutta methods that offer high-order accuracy while preserving stability.
 Suppose that one wants to integrate the following ODE system:
 \begin{equation}
