--- a/doc/dissertation/content/low_order/positivity_preservation.tex
+++ b/doc/dissertation/content/low_order/positivity_preservation.tex
@@ -1,5 +1,6 @@
 In this section, it will be shown that the low-order scheme for each temporal
-discretization preserves non-negativity of the solution. This section
+discretization preserves non-negativity of the solution, given that a
+CFL-like time step size condition is satisfied. This section
 builds upon the results of Section \ref{sec:m_matrix}, which proved that the
 low-order system matrix $\loworderssmatrix[n]$ is an M-matrix, which to
 recall Equation \eqref{eq:m_matrix}, has the property
