--- a/doc/dissertation/content/results/shallowwater/dam_break_1d/description.tex
+++ b/doc/dissertation/content/results/shallowwater/dam_break_1d/description.tex
@@ -17,6 +17,7 @@ Boundary Conditions & $\nabla\height(\x,t)=0
                     & $\velocity\xt\cdot\normalvector = 0
   \eqc \quad \x\in\partial\mathcal{D}\eqc \quad t>0$,\\
 Bathymetry & $\bathymetry(\x)=0$\\
+Gravity    & $\gravity=1$\\
 \bottomrule\end{tabular}
 \end{table}
 %-------------------------------------------------------------------------------
