--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -50,6 +50,7 @@ CFEM  & continuous finite element method\\
 CN    & Crank-Nicolson\\
 DI    & domain-invariant\\
 DMP   & discrete maximum principle\\
+DoF   & degree of freedom\\
 EV    & entropy viscosity\\
 FCT   & flux-corrected transport\\
 FE    & forward (explicit) Euler\\
