--- a/doc/dissertation/chapter3.tex
+++ b/doc/dissertation/chapter3.tex
@@ -24,6 +24,8 @@
   \input{content/results/transport/skew_void_to_absorber/description}
 \subsection{Glance-in-Void Test Problem\label{sec:glance_in_void}}
   \input{content/results/transport/glance_in_void/description}
+\subsection{Obstruction Test Problem\label{sec:obstruction}}
+  \input{content/results/transport/obstruction/description}
 \subsection{Source Void-to-Absorber Test Problem\label{sec:source_void_to_absorber}}
   \input{content/results/transport/source_void_to_absorber/description}
 \subsection{Multi-Region Test Problem\label{sec:multi_region}}
@@ -37,3 +39,5 @@
   \input{content/results/shallowwater/dam_break_1d/description}
 \subsection{Bathtub Test Problem\label{sec:bathtub}}
   \input{content/results/shallowwater/bathtub/description}
+\subsection{2-D Dam Break\label{sec:dam_break_2d}}
+  \input{content/results/shallowwater/dam_break_2d/description}
