--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -128,6 +128,20 @@
   Url                      = {http://dx.doi.org/10.1016/j.jcp.2011.03.042}
 }
 
+@Article{gottlieb,
+  Title                    = {On High Order Strong Stability Preserving Runge-Kutta and Multi Step Time Discretizations},
+  Author                   = {Sigal Gottlieb},
+  Journal                  = {Journal of Scientific Computing},
+  Year                     = {2005},
+
+  Month                    = {November},
+  Number                   = {1},
+  Volume                   = {25},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.08}
+}
+
 @InProceedings{goutal1997,
   Title                    = {Technical Report HE-43/97/016/A},
   Author                   = {N. Goutal and F. Maurel},
@@ -337,6 +351,18 @@
   Doi                      = {10.1016/j.jcp.2014.08.017},
   Owner                    = {joshua},
   Timestamp                = {2016.02.23}
+}
+
+@MastersThesis{macdonald,
+  Title                    = {Constructing High-Order Runge-Kutta Methods with Embedded Strong-Stability-Preserving Pairs},
+  Author                   = {Colin Barr Macdonald},
+  School                   = {Acadia University},
+  Year                     = {2003},
+  Month                    = {August},
+  Type                     = {Master's Thesis},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.08}
 }
 
 @Conference{maginot_mc2015,
